@@ -4,8 +4,10 @@
   * Using date column caused FormPanel to crash.
 
 * improvements
-  * Extra DSL for declaring columns and models in GridPanel
-  * New :override_columns config option for grid allows overriding specified column config (not influencing other columns order/inclusion).
+  * New DSL method (model) for declaring a model for grids
+  * New DSL method (column) for declaring columns for grids
+  * New :override_columns config option for grid allows overriding specified column config without influencing other columns' order/presence
+  * New DSL method (override_column) to override a specific column config without influencing other columns' order/presence.
 
 * API changes
   * Skip supporting ModelExtensions. The preferred way is using setters and getters on columns/fields.
